[tool.poetry]
name = "coffee-roulette"
version = "0.1.0"
description = ""
authors = ["Mitch Woodside <mitchmanwoodside@gmail.com>"]
readme = "README.md"
packages = [{include = "coffee_roulette"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cafe = 'coffee_roulette.cafe:cli'
