[project]
name = "coffee-roulette"
version = "0.1.2"
description = ""
authors = [{ name = "Mitch Woodside", email = "carmanmitchellwoodside@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = ["click>=8.1.3,<9"]

[project.scripts]
cafe = "coffee_roulette.cafe:cli"

[tool.hatch.build.targets.sdist]
include = ["coffee_roulette"]

[tool.hatch.build.targets.wheel]
include = ["coffee_roulette"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
